# falco-alpha

./: .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: actions.yml  python-package.yml
falco/: __init__.py
falco-alpha/: __init__.py
falco-alpha/core/dynamics/: aircraft_states.py  axis.py
falco-alpha/core/loads/tests/: test_loads.py  test_mass_properties.py
falco/core/loads/tests/: test_vector.py
falco_alpha/: __init__.py
falco_alpha/core/dynamics/: aircraft_states.py
falco_alpha/core/vehicle/components/tests/: test_component.py
falco_alpha/utils/: euler_rotations.py
